added plants lover section

--- a/index.html
+++ b/index.html
@@ -103,6 +103,28 @@
     </div>
 
   </section>
+  <!-- plants lover section  -->
+  <section class="plants-lover-section">
+    <div class="plants-lover-container">
+
+      <!-- ছবির অংশ -->
+      <div class="lover-image-wrapper">
+        <img src="assets/flower-store.png" alt="flower store " class="lover-image" />
+        <img src="assets/trusted-badge.png" alt="Trusted Badge" class="trusted-badge" />
+      </div>
+
+      <div class="lover-content">
+        <h2>Flower & Plants <span>Lover</span> </h2>
+        <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic
+          blooms, we offer a wide variety of fresh.</p>
+        <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic
+          blooms, we offer a wide variety of fresh.</p>
+        <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic
+          blooms, we offer a wide variety of fresh.</p>
+      </div>
+
+    </div>
+  </section>
 
 </body>
 
