--- a/index.html
+++ b/index.html
@@ -161,6 +161,19 @@
     </div>
   </section>
 
+  <!-- input type section  -->
+
+  <section class="join-section">
+
+    <div class="join-overlay">
+      <h2>Join the colorful Bunch</h2>
+      <form class="join-form">
+        <input type="email" placeholder="Write email" required>
+        <button type="submit">Subscribe</button>
+      </form>
+    </div>
+  </section>
+
 </body>
 
 </html>
