--- a/index.html
+++ b/index.html
@@ -173,6 +173,45 @@
       </form>
     </div>
   </section>
+  <!-- footer section  -->
+  <footer class="footer">
+    <div class="footer-container">
+      <div class="footer-left">
+        <img src="assets/logo.png" alt="Logo" class="footer-logo" />
+        <p>
+          Indulge your senses with the beauty and fragrance of our fresh flower shop.
+        </p>
+      </div>
+
+      <div class="footer-links">
+        <div class="link-column">
+          <h4>Home</h4>
+          <ul>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">FAQ</a></li>
+            <li><a href="">Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="link-column">
+          <h4>Features</h4>
+          <ul>
+            <li><a href="">Pricing</a></li>
+            <li><a href="">Privacy Policy</a></li>
+            <li><a href="">Terms of Service</a></li>
+            <li><a href="">Help Center</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="footer-social">
+        <a href=""><img src="assets/icon-linkedin.png" alt="LinkedIn" /></a>
+        <a href=""><img src="assets/icon-twitter.png" alt="Twitter" /></a>
+        <a href=""><img src="assets/icon-facebook.png" alt="Facebook" /></a>
+        <a href=""><img src="assets/icon-youtube.png" alt="YouTube" /></a>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
